more text and html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 text-align:center;
             }
             p{text-align:center;
-           
+           padding-top:50px;
             }
         </style>
         
@@ -37,10 +37,11 @@
   <div class="row">
     <div class="col">
      <h1 class="animate__animated animate__bounceInLeft ">Context</h1> 
-     <p>dwadwadv awdawdawd daw awhdauwhudh uhwduahwudo djwid disdj isjdaodjiw wjdjwid iajdoadjiw widjaodj iwjdoajd wijadoiwjd aiwjd</p>
+     <p>I picked this topic of basketball because I have played basketball my whole life and I am very passionate, involved, and educated on the topic. I am also very interested in technology so I figured why not just research and look at how technology is present in basketball and what it does for the sport and players of the sport. I also wanted to make an invention idea of my own using the things already made and the things needed in the basketball community and professional basketball. This idea that I came up with was never used before and I came up with myself based on how helpful it can be and the usage that would come out of the invention. </p>
     </div>
     <div class="col">
      <h1 class="animate__animated animate__bounceIn">Part A</h1>
+     <p>These are inventions already present in basketball today which vary from helping with recovery to helping with training and also helping with coaching. These inventions can make work in the basketball field easier and also make becoming a better basketball player easier.</p>
      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -67,10 +68,11 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<p>There are also software inventions such as apps that help players learn from their mistakes and watch film and helps players practice better and more efficiently. There are also apps that can be used to help coaches prepare for a team and even apps that can be used as a digital playbook full of plays for that team to run. Examples of thse are the following: </p>
     </div>
     <div class="col">
      <h1 class="animate__animated animate__bounceInRight"> Part B</h1>
-     <p></p>
+     <p>This is my idea for a new invention that can further help those who want to learn to be a better player and increase their understanding and feel for the game through watching film. This can also be used by coaches who want to drill a gameplan into their teams heads or plan for an upcoming team. They could even use this to fix mistakes that their team has made in the past games and watch the progress they make with these problems and mistakes in the most immersive way.</p>
     </div>
   </div>
 </div>
