list systems added in Part A and Part B

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             p{text-align:center;
            padding-top:50px;
             }
+            h2{
+                padding-bottom:20px;
+                text-align:center;
+            }
         </style>
         
         <title>Freedom Project</title>
@@ -68,11 +72,37 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<p>There are also software inventions such as apps that help players learn from their mistakes and watch film and helps players practice better and more efficiently. There are also apps that can be used to help coaches prepare for a team and even apps that can be used as a digital playbook full of plays for that team to run. Examples of thse are the following: </p>
+<p>There are also software inventions such as apps that help players learn from their mistakes and watch film and helps players practice better and more efficiently. There are also apps that can be used to help coaches prepare for a team and even apps that can be used as a digital playbook full of plays for that team to run. Examples of these are the following:</p>
+   <ul class="list-group">
+  <li class="list-group-item">Coaching apps: apps that coaches use to create plays and keep track of their team
+</li>
+  <li class="list-group-item">Player training apps: app to correct bad habits and teach how to improve by recording or looking at specified videos.
+</li>
+  <li class="list-group-item">Player health trackers: trackers for players heartbeat and amount of work and when they should take breaks or go to the doctor.
+</li>
+</ul>
     </div>
     <div class="col">
      <h1 class="animate__animated animate__bounceInRight"> Part B</h1>
-     <p>This is my idea for a new invention that can further help those who want to learn to be a better player and increase their understanding and feel for the game through watching film. This can also be used by coaches who want to drill a gameplan into their teams heads or plan for an upcoming team. They could even use this to fix mistakes that their team has made in the past games and watch the progress they make with these problems and mistakes in the most immersive way.</p>
+     <p>This is my idea for a new invention that can further help those who want to learn to be a better player and increase their understanding and feel for the game through watching film. This can also be used by coaches who want to drill a gameplan into their teams heads or plan for an upcoming team. They could even use this to fix mistakes that their team has made in the past games and watch the progress they make with these problems and mistakes in the most immersive way.
+     <ul class="list-group">
+         <h2>Hologram Room</h2>
+  <li class="list-group-item">It can be used in a room: which would be set for its sole purpose to be the “film room” or “holograph room” There would be the holographic technology set up around the room. 
+</li>
+  <li class="list-group-item">This can be used for play making by the coach and gameplans by setting a hologram figure to a player on the team who would be in the play and detailing or controlling what that player would do during this particular play and game plan.</li>
+  <li class="list-group-item">It would be controlled by an app on the coaches phone, tablet, or computer. It can be controlled in a gaming set up as in setting a certain figure to do a certain thing which can be set by using defaults or movements that have been recorded from the NBA or high-level basketball.</li>
+  <li class="list-group-item">There would be an ability to play exact moments from exact games and then edit those moments to what the coach thinks should've happened or went on.
+</li>
+  <li class="list-group-item">There would be an ability to take players out of the hologram displayed and zoom in to emphasize smaller details.
+</li>
+<li class="list-group-item">This whole hologram can not only be used to fix things that their own team did wrong but also capitalize on bad habits other teams have or holes in their game by watching their plays through hologram.
+
+ </li>
+ <li class="list-group-item">You could also set a memory or kind of bookmark on these bad habits that these teams have and when synced with your schedule the app will remind you to look at them before you play said team.
+
+ </li>
+</ul>
+</p>
     </div>
   </div>
 </div>
