--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             /* CSS */
         h1{
             text-align:center;
-            padding-bottom:100px;
+            padding-bottom:50px;
             color:#c77f84;
             padding-top:50px;
         }
@@ -23,7 +23,7 @@
         }
         p{
             text-align:center;
-            padding-top:50px;
+            padding-top:20px;
             color:#f5fbef;
 ;
         }
@@ -54,12 +54,12 @@
 
 
         <div class="container">
-  <div class="row">
-    <div class="col">
-     <h1 class="animate__animated animate__bounceInLeft ">Context</h1>
-     <p>I picked this topic of basketball because I have played basketball my whole life and I am very passionate, involved, and educated on the topic. I am also very interested in technology so I figured why not just research and look at how technology is present in basketball and what it does for the sport and players of the sport. I also wanted to make an invention idea of my own using the things already made and the things needed in the basketball community and professional basketball. This idea that I came up with was never used before and I came up with myself based on how helpful it can be and the usage that would come out of the invention. </p>
-    </div>
-    <div class="col">
+          <div class="row">
+            <div class="col-lg-4">
+                 <h1 class="animate__animated animate__bounceInLeft ">Context</h1>
+                 <p>I picked this topic of basketball because I have played basketball my whole life and I am very passionate, involved, and educated on the topic. I am also very interested in technology so I figured why not just research and look at how technology is present in basketball and what it does for the sport and players of the sport. I also wanted to make an invention idea of my own using the things already made and the things needed in the basketball community and professional basketball. This idea that I came up with was never used before and I came up with myself based on how helpful it can be and the usage that would come out of the invention. </p>
+            </div>
+    <div class="col-lg-4">
      <h1 class="animate__animated animate__bounceIn">Part A</h1>
      <p>These are inventions already present in basketball today which vary from helping with recovery to helping with training and also helping with coaching. These inventions can make work in the basketball field easier and also make becoming a better basketball player easier.</p>
      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -97,11 +97,16 @@
   <li class="list-group-item">Player health trackers: trackers for players heartbeat and amount of work and when they should take breaks or go to the doctor.
 </li>
 </ul>
-    </div>
-    <div class="col">
+</div>
+    
+    <div class="col-lg-4">
      <h1 class="animate__animated animate__bounceInRight"> Part B</h1>
      <p>This is my idea for a new invention that can further help those who want to learn to be a better player and increase their understanding and feel for the game through watching film. This can also be used by coaches who want to drill a gameplan into their teams heads or plan for an upcoming team. They could even use this to fix mistakes that their team has made in the past games and watch the progress they make with these problems and mistakes in the most immersive way.
      <ul class="list-group">
+         </div>
+         </div>
+         </div>
+         <div class="row">
          <h2>Hologram Room</h2>
   <li class="list-group-item">It can be used in a room: which would be set for its sole purpose to be the “film room” or “holograph room” There would be the holographic technology set up around the room.
 </li>
