--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         p{
             text-align:center;
             padding-top:20px;
-            color:#f5fbef;
+            color:#040403;
 ;
         }
         h2{
@@ -40,7 +40,7 @@
         }
 
         body{
-            background-color:#040403;
+            /*background-color:#040403;*/
 
         }
         .list-group-item{
