--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           background-color:#246eb9;
           color:#f5fbef;
           font-size:20px;
-          margin-bottom;
+          margin-bottom:20px;
           margin-top:;
 
         }
